<resources>
    <string name="app_name">Privacy Hadoop</string>
    <string name="about_us">
        \n\n

        This is the project from UCLA CS211. The app is built on the previous version from a CS211 team last year. \n \n

        Our group has the following members: \n \n

        Guo, Cheng (glomguo@g.ucla.edu),\n
        Lin, Jonathan (jonathan.lin@cs.ucla.edu),\n
        Tan, Zhaowei (tan@cs.ucla.edu),\n
        Xia, Yumin (yumin@cs.ucla.edu). \n\n

        We would like to thank our Tutor Zengwen Yuan and our Professor Songwu Lu for their mentoring. \n\n

        Thank you for using our app. \n\n

        Privacy Aware Mobile Hadoop Group

    </string>

    <string name="action_p2p_on_off">P2P On/Off</string>
    <string name="action_show_status">Show Status</string>
    <string name="action_version">Version</string>
    <string name="action_about_us">About Us</string>
    <string name="action_quit">Quit</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="lbl_me">Me</string>
    <string name="lbl_peers">Peers</string>
    <string name="msg_no_device">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="connect_peer">Connect</string>
    <string name="disconnect_peer">Disconnect</string>

    <string name="action_settings">Settings</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="show_terminal_button">Show Terminal</string>
    <string name="start_ipsync_button">Sync peer IP</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <!--<string name="start_hadoop_button">Launch Hadoop</string>
    <string name="stop_hadoop_button">Stop Hadoop</string>-->
    <string name="empty"></string>
    <string name="no_resource">No file available. Waiting other for sharing</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="title_activity_terminal">TerminalActivity</string>
    <string name="show_status_button">Show Status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
