<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="ucla.glomguo.privacy_hadoop.MainActivity">

    <item
        android:id="@+id/item_p2p_on_off"
        android:title="@string/action_p2p_on_off"/>

    <item
        android:id="@+id/item_show_status"
        android:title="@string/action_show_status"/>

    <item
        android:id="@+id/item_version"
        android:title="@string/action_version"/>

    <item
        android:id="@+id/item_about_us"
        android:title="@string/action_about_us"/>

    <item
        android:id="@+id/item_tutorial"
        android:title="@string/action_tutorial"/>

    <item
        android:id="@+id/item_quit"
        android:title="@string/action_quit"/>




</menu>
